Closed
Bug 848490
Opened 12 years ago
Closed 12 years ago
[SkiaGL] Handle canvas elements larger than the maximum GPU texture size
Categories
(Core :: Graphics, defect, P1)
Core
Graphics
Tracking
()
RESOLVED
FIXED
mozilla24
People
(Reporter: gw280, Assigned: gw280)
References
Details
Attachments
(1 file)
|
1.21 KB,
patch
|
snorp
:
review+
|
Details | Diff | Splinter Review |
On mobile, 4096x4096 is common as the maximum texture size. A bunch of canvas demos use textures larger than this as atlases. We should investigate either implementing a tiled render target architecture (long-term solution) and a software fallback if the canvas dimensions exceed the maximum GPU allowable dimensions (short term).
Updated•12 years ago
|
Priority: -- → P1
| Assignee | ||
Comment 1•12 years ago
|
||
Fallback to software if GLContextProvider::CreateOffscreen returns nullptr (which it should do if we try to create an offscreen larger than the GPU can handle).
Attachment #743813 -
Flags: review?(snorp)
Comment 2•12 years ago
|
||
Comment on attachment 743813 [details] [diff] [review]
fallback to software
Review of attachment 743813 [details] [diff] [review]:
-----------------------------------------------------------------
Yup, I had the exact same patch locally. Looks good.
Attachment #743813 -
Flags: review?(snorp) → review+
| Assignee | ||
Comment 3•12 years ago
|
||
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Comment 4•12 years ago
|
||
Backed out for reftest crashes. Thanks for watching your push after landing on m-c, btw.
https://hg.mozilla.org/mozilla-central/rev/b25afb305360
https://tbpl.mozilla.org/php/getParsedLog.php?id=22711192&tree=Mozilla-Central
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Comment 5•12 years ago
|
||
And a mochitest failure.
https://tbpl.mozilla.org/php/getParsedLog.php?id=22711902&tree=Mozilla-Central
And a reftest unexpected pass.
https://tbpl.mozilla.org/php/getParsedLog.php?id=22711772&tree=Mozilla-Central
| Assignee | ||
Comment 6•12 years ago
|
||
Comment 7•12 years ago
|
||
Status: REOPENED → RESOLVED
Closed: 12 years ago → 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla24
You need to log in
before you can comment on or make changes to this bug.
Description
•