Bug 848490 - [SkiaGL] Handle canvas elements larger than the maximum GPU texture size