content/canvas/src/CanvasRenderingContext2D.cpp
@@ -805,7 +805,12 @@ CanvasRenderingContext2D::EnsureTarget()
                                                                                  size.height),
                                                                       SurfaceCaps::ForRGBA(),
                                                                       mozilla::gl::GLContext::ContextFlagsNone);
-         mTarget = gfxPlatform::GetPlatform()->CreateDrawTargetForFBO(0, mGLContext, size, format);
+
+         if (mGLContext) {
+           mTarget = gfxPlatform::GetPlatform()->CreateDrawTargetForFBO(0, mGLContext, size, format);
+         } else {
+           mTarget = layerManager->CreateDrawTarget(size, format);
+         }
        } else
 #endif
          mTarget = layerManager->CreateDrawTarget(size, format);
